<resources>
    <string name="app_name">BloodDoner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_username">Phone Number/username</string>
    <string name="password">Password</string>
    <string name="text_continue">Continue</string>
    <string name="not_yet_donor">Not yet a donor?</string>
    <string name="register">Register</string>
    <string name="hello">Hello!</string>
    <string name="please_create_your_account">please create your account</string>
    <string name="i_already_have_account">I already have an account</string>
    <string name="login">Login</string>
    <string name="verify_phone_number">please create your account</string>
    <string name="please_enter_the_code">please enter the 4 digit code sent to</string>
    <string name="throught_sms">through SMS</string>
    <string name="dont_receive_code">Don\'t receive code?</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="wrong_number">Wrong number</string>
    <string name="verify_number">Verify number</string>
    <string name="by_continue_your_indicating_that_you_accept">By continue you\'re indicating that you accept our <our></our></string>
    <string name="submit">Submit</string>
    <string name="you_can_donate">You can donate for ones in need and request blood if you need</string>
    <string name="donate_blood_save_life">Donate Blood. Save Lives.</string>

    <string name="not_donor">Not yet a donor? <b>Register</b></string>
    <string name="edit">Edit</string>
    <string name="verify_phno">Verify Phone Number</string>
    <string name="tou"><u>Terms of Use</u></string>
    <string name="pri_policy"><u>Privacy Policy</u></string>
    <string name="and_our">and our</string>

    <string name="lorem_ipsum">lorem ipsum dolor sit amet, consectetur adipiscing Elementum eu non trstique dolor non amet</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="blood_group">Blood Group</string>
    <string name="postal_add">Postal Address</string>
    <string name="congrats">Congratulations, your account has been succesfully created.</string>
    <string name="welcome">Welcome</string>
    <string name="select_Service">Kindly select the service you want to render</string>
    <string name="donor">Donor</string>
    <string name="receiver">Receiver</string>
    <string name="donor_reg">Donor Registration</string>
    <string name="registration">Registration</string>
    <string name="hi_there">Hi there!\nA quick question about your health</string>
    <string name="feel_healthy">1. Are you feeling healthy and well?</string>
    <string name="gasttic_update">2. Had a gastric update, diarorrhoea, abdominal pain or vomiting?</string>
    <string name="disease">3. Do you have any of these diseases?</string>
    <string name="blood_pressure">Blood Pressure issues</string>
    <string name="corona_virus">Corona Virus</string>
    <string name="Diabetes">Diabetes</string>
    <string name="Heart_issue">Heart Issues</string>
    <string name="others">Others</string>
    <string name="sorry">Sorry!\nyou can not register as a done for the time being. </string>
    <string name="find_donors">Find Donors</string>
    <string name="request_blood">Request Blood</string>

    <string name="history">History</string>
    <string name="campaign">Campaign</string>
    <string name="report">Report</string>
    <string name="nearest_hosp">Nearest Hospital</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="last_updated">Last updated</string>
    <string name="home">Home</string>
    <string name="search_donor">Search Donor</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="terms_cond">Terms and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="text_send">Send Us a Messege</string>
    <string name="messege">Messege</string>
    <string name="serach_donors">Search for donors around you</string>
    <string name="donor_list">Donor List</string>
    <string name="filter">Filter</string>
    <string name="serach">Search</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="my_request">My Request</string>
    <string name="donations">Donations</string>
    <string name="chat_now">Chat Now</string>
    <string name="request">Request</string>
    <string name="requestng_for">Requesting for</string>
    <string name="myself">Myself</string>
    <string name="other">Others</string>
    <string name="bg_unit">Blood Units Required</string>
    <string name="whole_blood">Whole Blood</string>
    <string name="plasma">Plasma</string>
    <string name="platelets">Platelets</string>
    <string name="red_cells">Double Red Cells</string>
    <string name="req_reason">Request Reason</string>
    <string name="name_loc">Hospital Name and Location</string>
    <string name="hint_name_loc">Plese Enter Hospital Name and Location</string>
    <string name="select_map">Select on Map</string>
    <string name="additional_info">Additional information(optional</string>
    <string name="publish_req">Publish Request</string>
    <string name="hint_place">Search Place</string>
    <string name="req_submitted">Your Request has been submitted </string>
    <string name="req_history">Request History</string>
    <string name="rec_request">Received Request</string>
    <string name="accept_req">Accept Request</string>
    <string name="contact">Contact</string>
    <string name="cancel_req">Cancel Request</string>
    <string name="hint_messege">write a messege...</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="pick_date">Pick Date</string>
    <string name="available_time">Available Time</string>
    <string name="hospital">Hospital</string>
    <string name="conf_appointment">Confirm Appointmnet</string>
    <string name="app_names">BottomNavigationView</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_category">Category</string>
    <string name="title_profile">Profile</string>
    <string name="searches">Search</string>
    <string name="about">About</string>


</resources>